--- a/styles.css
+++ b/styles.css
@@ -128,6 +128,13 @@ body {
 #work-experience{
     padding: 50px !important;
 }
+
+#work-experience-gallery{
+    display: flex !important;
+    flex-direction: column !important;
+    align-items: center;
+}
+
 #projects{
     padding-bottom: 50px;
 }
